<resources>
    <string name="app_name">Visi Laundry</string>
    <string name="action_history">History</string>
    <string name="action_about">About</string>
    <string name="action_logout">Logout</string>
    <string name="action_profil">Profile</string>

    <string name="nama_paket_celana_panjang">Celana Panjang</string>
    <string name="nama_paket_jaket">Jaket</string>
    <string name="nama_paket_kemeja_panjang">Kemeja Panjang</string>
    <string name="nama_paket_kemeja_pendek">Kemeja Pendek</string>
    <string name="harga_paket_celana_panjang">15.000</string>
    <string name="harga_paket_kemeja_panjang">8.000</string>
    <string name="harga_paket_kemeja_pendek">7.000</string>
    <string name="harga_paket_jaket">10.000</string>

    <string name="title_activity_history">History</string>
    <string name="title_activity_about">Tentang</string>
    <string name="title_activity_registrasi">Registrasi</string>
    <string name="title_activity_profile">Profile</string>

    <string name="pesan_quantity_text">Quantity</string>
    <string name="pesan_text">Pesan</string>
    <string name="batal_text">Batal</string>
    <string name="login_text">Login</string>
    <string name="daftar_text">Daftar</string>
    <string name="saran_daftar_text">Silahkan mendaftar jika belum mempunyai akun</string>

    <string name="hint_email_text">Masukan email</string>
    <string name="hint_password_text">Masukan password</string>
    <string name="hint_password_konfirmasi_text">Masukan password konfirmasi</string>
    <string name="hint_no_hp_text">Masukan nomor telpon</string>
    <string name="hint_username_text">Masukan username</string>
    <string name="hint_nama_lengkap_text">Masukan nama lengkap</string>
    <string name="hint_alamat_text">Masukan alamat</string>

    <string name="about">
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
    </string>
    <string name="title_activity_drawer">Visi Laundry</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
