<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.digitcreativestudio.visilaundry.RegistrasiActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <EditText
            android:inputType="text"
            android:layout_marginTop="20dp"
            android:id="@+id/nama_lengkap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nama_lengkap_text"/>

        <EditText
            android:inputType="text"
            android:layout_marginTop="10dp"
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username_text"/>
        <EditText
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email_text"/>
        <EditText
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password_text"/>
        <EditText
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            android:id="@+id/password_konfirmasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password_konfirmasi_text"/>
        <EditText
            android:inputType="phone"
            android:layout_marginTop="10dp"
            android:id="@+id/no_telp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_no_hp_text"/>
        <EditText
            android:inputType="text"
            android:layout_marginTop="10dp"
            android:id="@+id/alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_alamat_text"/>
        <Button
            android:id="@+id/button_daftar"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPutih"
            android:text="@string/daftar_text"/>
    </LinearLayout>
</ScrollView>
