<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.digitcreativestudio.visilaundry.MainActivity">

    <item
        android:icon="@drawable/ic_more_vert_24dp"
        app:showAsAction="always"
        android:title="More">
        <menu>

            <!-- Refresh -->
            <item
                android:id="@+id/action_history"
                android:icon="@drawable/ic_history_white_24dp"
                app:showAsAction="never"
                android:title="@string/action_history"/>
            <item
                android:id="@+id/action_profil"
                android:icon="@drawable/ic_person_outline_24dp"
                app:showAsAction="never"
                android:title="@string/action_profil"/>
            <item
                android:id="@+id/action_about"
                android:icon="@drawable/ic_info_outline_24dp"
                app:showAsAction="never"
                android:title="@string/action_about"/>

            <!-- Help -->
            <item
                android:id="@+id/action_logout"
                android:icon="@drawable/ic_exit_to_app_24dp"
                app:showAsAction="never"
                android:title="@string/action_logout"/>

        </menu>
    </item>

</menu>
