<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.digitcreativestudio.visilaundry.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="16dp"
        android:orientation="vertical">
        <ImageView
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:inputType="textEmailAddress"
            android:layout_marginTop="20dp"
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email_text"/>

        <EditText
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password_text"/>
        <Button
            android:id="@+id/button_login"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPutih"
            android:text="@string/login_text"/>
        <TextView
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saran_daftar_text"/>
        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/daftar_text"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daftar_text"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:padding="10dp"/>
    </LinearLayout>
</ScrollView>
